<resources>
    <string name="app_name">PoemTime</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">PoemTime</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_alarm">Alarm</string>
    <string name="nav_header_subtitle">Let Chinese culture walk into your life</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="time_alt">PoemTime</string>
    <string name="about">About</string>
    <string name="date_alt">Let Chinese culture walk into your life</string>
    <string name="poem_alt">Make your life a poem</string>
    <string name="chpoem">Change a poem</string>
    <string name="error">Something went wrong.\nPlease check your Internet connection, and click here to try again.</string>
    <string name="dark">Dark Mode</string>
    <string name="license">License</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_sum">Report technical issues or suggest new features</string>
    <string name="fullscreen_exit">Exit Fullscreen</string>
    <string name="settings_online">Online services</string>
    <string name="online_sum_on">Allow app to get poem online</string>
    <string name="online_sum_off">Show local poems</string>
    <string name="menu_poem">Poem</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
    <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
    <string name="aboutLibraries_description_text">PoemTime, Let Chinese culture walk into your life.</string>
    <string name="settings_delay_title">Reading speed (char/sec)</string>
    <string name="settings_delay_sum">Characters you can read per sec. The speed to change a verse depends on it.</string>
    <string name="search">Search</string>
    <string name="start">start</string>
    <string name="end">ended</string>
</resources>