<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <include app:graph="@navigation/aboutlibs_navigation"/>

    <fragment
        android:id="@+id/nav_home"
        android:name="io.goosople.poemtime.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="io.goosople.poemtime.SettingsFragment"
        android:label="@string/menu_settings" >
        <action
            android:id="@+id/action_nav_settings_to_about_libs"
            app:destination="@id/about_libraries" />
    </fragment>
    <activity
        android:id="@+id/fullscreenActivity"
        android:name="io.goosople.poemtime.FullscreenActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_fullscreen" />
    <fragment
        android:id="@+id/poemFragment"
        android:name="io.goosople.poemtime.PoemFragment"
        android:label="@string/menu_poem"
        tools:layout="@layout/fragment_poem" >
    </fragment>

</navigation>